--- a/Code/DLH_Patient_Phenotyping.ipynb
+++ b/Code/DLH_Patient_Phenotyping.ipynb
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 115,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OcVwbjZ1SlkC",
-        "outputId": "3d6929e5-6462-4b99-d924-000a609fac29"
+        "outputId": "ad1344e5-5bbc-418a-b3bb-1466f601fa85"
       },
       "outputs": [
         {
@@ -90,13 +90,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 116,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rDVy_8aZt5fA",
-        "outputId": "9cc597c5-9ca3-47a6-8564-1d9186508b81"
+        "outputId": "299138c9-2638-4f7f-c62e-9c42200426ad"
       },
       "outputs": [
         {
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "5LFSFksFq9uh"
       },
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "cepCi-AEai1d"
       },
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "JmFUPvB7sI8F"
       },
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -221,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "4Hp1jEhusLY4"
       },
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "2nmY6psTsNYM"
       },
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "FKH587uXsr_N"
       },
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "KZi6aXsLstuT"
       },
@@ -332,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "amuFbsrXsveU"
       },
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "KWN3sDoNwJJZ"
       },
@@ -451,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -491,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -517,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "RvuKAvdI8hYM"
       },
@@ -535,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "MCFqK-sE8jUO"
       },
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "Qlk0Uggr88OA"
       },
@@ -567,7 +567,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "G1Sw8yAdvGls"
       },
@@ -639,7 +639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -692,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "metadata": {
         "id": "k2HirDUt9Jen"
       },
@@ -716,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "AIyedpEL9MZi"
       },
@@ -767,7 +767,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -956,19 +956,19 @@
       "metadata": {
         "id": "ZH9LPceZyQws"
       },
-      "execution_count": 108,
+      "execution_count": 117,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Save the Model\n",
-        "torch.save(trained_model, PATH)"
+        "#torch.save(trained_model, PATH)"
       ],
       "metadata": {
         "id": "hKzUxQY7x1sh"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -983,9 +983,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TolPup9E1xFL",
-        "outputId": "b52c118d-7627-4da4-b123-6efc5551d8ce"
+        "outputId": "85de2c0a-087f-4132-89dd-10f71275ab43"
       },
-      "execution_count": 109,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,7 +1015,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 123,
       "metadata": {
         "id": "eAyjpKA7fjkB"
       },
@@ -1030,10 +1030,7 @@
         "            text = batch['text']\n",
         "            labels = batch['labels']\n",
         "            pred = model(text).cpu()\n",
-        "            condition = pred>0.5\n",
-        "            pred =pred.where(condition, torch.tensor(0.0))\n",
-        "            condition = pred==0\n",
-        "            pred =pred.where(condition, torch.tensor(1.0))\n",
+        "            pred= np.round(pred)\n",
         "            Y_pred.append(pred)\n",
         "            Y_true.append(labels)\n",
         "    return Y_pred, Y_true"
@@ -1050,7 +1047,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 124,
       "metadata": {
         "id": "MnVRcqHQf9Xo"
       },
@@ -1070,20 +1067,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 125,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "omb3wrzfGfa8",
-        "outputId": "ecdaabf8-f4ef-4135-feb3-f171a8da6f9a"
+        "outputId": "7b6fcf58-c7b7-4b71-bc4e-b212bd99ba9a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test Accuracy : 0.21301775147928995\n",
+            "Test Accuracy : 0.20710059171597633\n",
             "\n",
             "Classification Report : \n",
             "                                               precision    recall  f1-score   support\n",
@@ -1091,22 +1088,22 @@
             "                                      Obesity       1.00      0.00      0.00        11\n",
             "                                Non.Adherence       0.33      0.14      0.20        14\n",
             "              Developmental.Delay.Retardation       1.00      0.00      0.00         3\n",
-            "                       Advanced.Heart.Disease       0.62      0.42      0.50        36\n",
-            "                        Advanced.Lung.Disease       0.67      0.12      0.20        17\n",
-            "Schizophrenia.and.other.Psychiatric.Disorders       0.88      0.18      0.30        38\n",
+            "                       Advanced.Heart.Disease       0.61      0.39      0.47        36\n",
+            "                        Advanced.Lung.Disease       0.75      0.18      0.29        17\n",
+            "Schizophrenia.and.other.Psychiatric.Disorders       0.86      0.16      0.27        38\n",
             "                                Alcohol.Abuse       0.82      0.67      0.74        21\n",
             "                        Other.Substance.Abuse       0.57      0.36      0.44        11\n",
             "                    Chronic.Pain.Fibromyalgia       0.59      0.46      0.52        28\n",
-            "             Chronic.Neurological.Dystrophies       0.80      0.11      0.20        35\n",
+            "             Chronic.Neurological.Dystrophies       1.00      0.11      0.21        35\n",
             "                              Advanced.Cancer       1.00      0.33      0.50        18\n",
             "                                   Depression       0.56      0.32      0.41        47\n",
             "                                     Dementia       1.00      0.00      0.00        17\n",
             "                                       Unsure       0.00      0.00      0.00        19\n",
             "\n",
             "                                    micro avg       0.65      0.26      0.37       315\n",
-            "                                    macro avg       0.70      0.22      0.29       315\n",
-            "                                 weighted avg       0.68      0.26      0.34       315\n",
-            "                                  samples avg       0.80      0.38      0.35       315\n",
+            "                                    macro avg       0.72      0.22      0.29       315\n",
+            "                                 weighted avg       0.71      0.26      0.33       315\n",
+            "                                  samples avg       0.81      0.38      0.35       315\n",
             "\n"
           ]
         }
@@ -1129,13 +1126,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 126,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SMOed1bsoMac",
-        "outputId": "733e6665-7075-4455-dfaa-d7e84b78f1ad"
+        "outputId": "2d89f759-ab18-4bf9-dbf3-4b83433a7b81"
       },
       "outputs": [
         {
@@ -1147,9 +1144,9 @@
             "                                      Obesity       1.00      0.00      0.00         5\n",
             "                                Non.Adherence       0.00      0.00      0.00         4\n",
             "              Developmental.Delay.Retardation       1.00      0.00      0.00         1\n",
-            "                       Advanced.Heart.Disease       0.62      0.50      0.55        16\n",
-            "                        Advanced.Lung.Disease       0.50      0.11      0.18         9\n",
-            "Schizophrenia.and.other.Psychiatric.Disorders       0.83      0.33      0.48        15\n",
+            "                       Advanced.Heart.Disease       0.58      0.44      0.50        16\n",
+            "                        Advanced.Lung.Disease       0.67      0.22      0.33         9\n",
+            "Schizophrenia.and.other.Psychiatric.Disorders       0.80      0.27      0.40        15\n",
             "                                Alcohol.Abuse       0.80      0.67      0.73         6\n",
             "                        Other.Substance.Abuse       0.67      0.50      0.57         4\n",
             "                    Chronic.Pain.Fibromyalgia       0.67      0.50      0.57        12\n",
@@ -1159,10 +1156,10 @@
             "                                     Dementia       1.00      0.00      0.00         4\n",
             "                                       Unsure       0.00      0.00      0.00         8\n",
             "\n",
-            "                                    micro avg       0.65      0.29      0.40       120\n",
-            "                                    macro avg       0.70      0.23      0.28       120\n",
-            "                                 weighted avg       0.69      0.29      0.36       120\n",
-            "                                  samples avg       0.80      0.41      0.34       120\n",
+            "                                    micro avg       0.64      0.28      0.39       120\n",
+            "                                    macro avg       0.71      0.23      0.28       120\n",
+            "                                 weighted avg       0.70      0.28      0.35       120\n",
+            "                                  samples avg       0.80      0.40      0.34       120\n",
             "\n",
             "                                               precision    recall  f1-score   support\n",
             "\n",
@@ -1175,16 +1172,16 @@
             "                                Alcohol.Abuse       1.00      0.70      0.82        10\n",
             "                        Other.Substance.Abuse       0.50      0.25      0.33         4\n",
             "                    Chronic.Pain.Fibromyalgia       0.50      0.40      0.44        10\n",
-            "             Chronic.Neurological.Dystrophies       0.67      0.13      0.22        15\n",
+            "             Chronic.Neurological.Dystrophies       1.00      0.13      0.24        15\n",
             "                              Advanced.Cancer       1.00      0.33      0.50         9\n",
             "                                   Depression       0.55      0.35      0.43        17\n",
             "                                     Dementia       1.00      0.00      0.00         8\n",
             "                                       Unsure       1.00      0.00      0.00         5\n",
             "\n",
-            "                                    micro avg       0.73      0.27      0.40       121\n",
-            "                                    macro avg       0.86      0.24      0.32       121\n",
-            "                                 weighted avg       0.82      0.27      0.36       121\n",
-            "                                  samples avg       0.87      0.39      0.39       121\n",
+            "                                    micro avg       0.75      0.27      0.40       121\n",
+            "                                    macro avg       0.89      0.24      0.32       121\n",
+            "                                 weighted avg       0.86      0.27      0.36       121\n",
+            "                                  samples avg       0.89      0.39      0.39       121\n",
             "\n",
             "                                               precision    recall  f1-score   support\n",
             "\n",
