--- a/Code/DLH_Patient_Phenotyping.ipynb
+++ b/Code/DLH_Patient_Phenotyping.ipynb
@@ -1015,7 +1015,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 127,
       "metadata": {
         "id": "eAyjpKA7fjkB"
       },
@@ -1030,9 +1030,11 @@
         "            text = batch['text']\n",
         "            labels = batch['labels']\n",
         "            pred = model(text).cpu()\n",
-        "            pred= np.round(pred)\n",
-        "            Y_pred.append(pred)\n",
-        "            Y_true.append(labels)\n",
+        "            pred=np.round(pred)\n",
+        "            Y_pred.append(pred.numpy())\n",
+        "            Y_true.append(labels.cpu().numpy())\n",
+        "        Y_pred = np.concatenate(Y_pred, axis = 0)\n",
+        "        Y_true = np.concatenate(Y_true, axis = 0)\n",
         "    return Y_pred, Y_true"
       ]
     },
@@ -1047,7 +1049,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 130,
       "metadata": {
         "id": "MnVRcqHQf9Xo"
       },
@@ -1067,20 +1069,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 136,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "omb3wrzfGfa8",
-        "outputId": "7b6fcf58-c7b7-4b71-bc4e-b212bd99ba9a"
+        "outputId": "66e9ddcc-5f15-41d8-cbba-a31ab2e08b7e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test Accuracy : 0.20710059171597633\n",
+            "Test Accuracy : 0.21301775147928995\n",
             "\n",
             "Classification Report : \n",
             "                                               precision    recall  f1-score   support\n",
@@ -1090,20 +1092,20 @@
             "              Developmental.Delay.Retardation       1.00      0.00      0.00         3\n",
             "                       Advanced.Heart.Disease       0.61      0.39      0.47        36\n",
             "                        Advanced.Lung.Disease       0.75      0.18      0.29        17\n",
-            "Schizophrenia.and.other.Psychiatric.Disorders       0.86      0.16      0.27        38\n",
+            "Schizophrenia.and.other.Psychiatric.Disorders       0.88      0.18      0.30        38\n",
             "                                Alcohol.Abuse       0.82      0.67      0.74        21\n",
             "                        Other.Substance.Abuse       0.57      0.36      0.44        11\n",
             "                    Chronic.Pain.Fibromyalgia       0.59      0.46      0.52        28\n",
             "             Chronic.Neurological.Dystrophies       1.00      0.11      0.21        35\n",
             "                              Advanced.Cancer       1.00      0.33      0.50        18\n",
-            "                                   Depression       0.56      0.32      0.41        47\n",
+            "                                   Depression       0.58      0.32      0.41        47\n",
             "                                     Dementia       1.00      0.00      0.00        17\n",
             "                                       Unsure       0.00      0.00      0.00        19\n",
             "\n",
-            "                                    micro avg       0.65      0.26      0.37       315\n",
-            "                                    macro avg       0.72      0.22      0.29       315\n",
-            "                                 weighted avg       0.71      0.26      0.33       315\n",
-            "                                  samples avg       0.81      0.38      0.35       315\n",
+            "                                    micro avg       0.66      0.26      0.37       315\n",
+            "                                    macro avg       0.72      0.23      0.29       315\n",
+            "                                 weighted avg       0.71      0.26      0.34       315\n",
+            "                                  samples avg       0.81      0.39      0.35       315\n",
             "\n"
           ]
         }
@@ -1117,101 +1119,11 @@
         "               'Dementia', 'Unsure']\n",
         "\n",
         "# Collecting the Predcitions and Truth\n",
-        "Y_pred = torch.vstack((y_pred[0], y_pred[1], y_pred[2]))\n",
-        "Y_true = torch.vstack((y_true[0], y_true[1], y_true[2]))\n",
-        "print(\"Test Accuracy : {}\".format(accuracy_score(Y_true.cpu(), Y_pred.cpu()), zero_division=1))\n",
+        "#Y_pred = torch.vstack((y_pred[0], y_pred[1], y_pred[2]))\n",
+        "#Y_true = torch.vstack((y_true[0], y_true[1], y_true[2]))\n",
+        "print(\"Test Accuracy : {}\".format(accuracy_score(y_true, y_pred), zero_division=1))\n",
         "print(\"\\nClassification Report : \")\n",
-        "print(classification_report(Y_true.cpu().numpy(), Y_pred.cpu(), target_names=target_classes, zero_division=1))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 126,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SMOed1bsoMac",
-        "outputId": "2d89f759-ab18-4bf9-dbf3-4b83433a7b81"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "                                               precision    recall  f1-score   support\n",
-            "\n",
-            "                                      Obesity       1.00      0.00      0.00         5\n",
-            "                                Non.Adherence       0.00      0.00      0.00         4\n",
-            "              Developmental.Delay.Retardation       1.00      0.00      0.00         1\n",
-            "                       Advanced.Heart.Disease       0.58      0.44      0.50        16\n",
-            "                        Advanced.Lung.Disease       0.67      0.22      0.33         9\n",
-            "Schizophrenia.and.other.Psychiatric.Disorders       0.80      0.27      0.40        15\n",
-            "                                Alcohol.Abuse       0.80      0.67      0.73         6\n",
-            "                        Other.Substance.Abuse       0.67      0.50      0.57         4\n",
-            "                    Chronic.Pain.Fibromyalgia       0.67      0.50      0.57        12\n",
-            "             Chronic.Neurological.Dystrophies       1.00      0.00      0.00        12\n",
-            "                              Advanced.Cancer       1.00      0.20      0.33         5\n",
-            "                                   Depression       0.73      0.42      0.53        19\n",
-            "                                     Dementia       1.00      0.00      0.00         4\n",
-            "                                       Unsure       0.00      0.00      0.00         8\n",
-            "\n",
-            "                                    micro avg       0.64      0.28      0.39       120\n",
-            "                                    macro avg       0.71      0.23      0.28       120\n",
-            "                                 weighted avg       0.70      0.28      0.35       120\n",
-            "                                  samples avg       0.80      0.40      0.34       120\n",
-            "\n",
-            "                                               precision    recall  f1-score   support\n",
-            "\n",
-            "                                      Obesity       1.00      0.00      0.00         4\n",
-            "                                Non.Adherence       1.00      0.20      0.33         5\n",
-            "              Developmental.Delay.Retardation       1.00      0.00      0.00         1\n",
-            "                       Advanced.Heart.Disease       0.86      0.50      0.63        12\n",
-            "                        Advanced.Lung.Disease       1.00      0.33      0.50         3\n",
-            "Schizophrenia.and.other.Psychiatric.Disorders       1.00      0.11      0.20        18\n",
-            "                                Alcohol.Abuse       1.00      0.70      0.82        10\n",
-            "                        Other.Substance.Abuse       0.50      0.25      0.33         4\n",
-            "                    Chronic.Pain.Fibromyalgia       0.50      0.40      0.44        10\n",
-            "             Chronic.Neurological.Dystrophies       1.00      0.13      0.24        15\n",
-            "                              Advanced.Cancer       1.00      0.33      0.50         9\n",
-            "                                   Depression       0.55      0.35      0.43        17\n",
-            "                                     Dementia       1.00      0.00      0.00         8\n",
-            "                                       Unsure       1.00      0.00      0.00         5\n",
-            "\n",
-            "                                    micro avg       0.75      0.27      0.40       121\n",
-            "                                    macro avg       0.89      0.24      0.32       121\n",
-            "                                 weighted avg       0.86      0.27      0.36       121\n",
-            "                                  samples avg       0.89      0.39      0.39       121\n",
-            "\n",
-            "                                               precision    recall  f1-score   support\n",
-            "\n",
-            "                                      Obesity       1.00      0.00      0.00         2\n",
-            "                                Non.Adherence       0.50      0.20      0.29         5\n",
-            "              Developmental.Delay.Retardation       1.00      0.00      0.00         1\n",
-            "                       Advanced.Heart.Disease       0.25      0.12      0.17         8\n",
-            "                        Advanced.Lung.Disease       1.00      0.00      0.00         5\n",
-            "Schizophrenia.and.other.Psychiatric.Disorders       1.00      0.00      0.00         5\n",
-            "                                Alcohol.Abuse       0.60      0.60      0.60         5\n",
-            "                        Other.Substance.Abuse       0.50      0.33      0.40         3\n",
-            "                    Chronic.Pain.Fibromyalgia       0.60      0.50      0.55         6\n",
-            "             Chronic.Neurological.Dystrophies       1.00      0.25      0.40         8\n",
-            "                              Advanced.Cancer       1.00      0.50      0.67         4\n",
-            "                                   Depression       0.20      0.09      0.13        11\n",
-            "                                     Dementia       1.00      0.00      0.00         5\n",
-            "                                       Unsure       0.00      0.00      0.00         6\n",
-            "\n",
-            "                                    micro avg       0.50      0.19      0.27        74\n",
-            "                                    macro avg       0.69      0.19      0.23        74\n",
-            "                                 weighted avg       0.61      0.19      0.24        74\n",
-            "                                  samples avg       0.70      0.34      0.30        74\n",
-            "\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(classification_report(y_true[0].cpu().numpy(), y_pred[0].cpu(), target_names=target_classes, zero_division=1))\n",
-        "print(classification_report(y_true[1].cpu().numpy(), y_pred[1].cpu(), target_names=target_classes, zero_division=1))\n",
-        "print(classification_report(y_true[2].cpu().numpy(), y_pred[2].cpu(), target_names=target_classes, zero_division=1))"
+        "print(classification_report(y_true, y_pred, target_names=target_classes, zero_division=1))"
       ]
     }
   ],
