--- a/Code/DLH_Patient_Phenotyping.ipynb
+++ b/Code/DLH_Patient_Phenotyping.ipynb
@@ -39,20 +39,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OcVwbjZ1SlkC",
-        "outputId": "ad1344e5-5bbc-418a-b3bb-1466f601fa85"
+        "outputId": "23c9c252-3b9e-41e6-aef1-3b89b8ead105"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -90,13 +90,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rDVy_8aZt5fA",
-        "outputId": "299138c9-2638-4f7f-c62e-9c42200426ad"
+        "outputId": "20509d4b-7151-459d-d5b2-f680d2bde68b"
       },
       "outputs": [
         {
@@ -104,7 +104,7 @@
           "name": "stdout",
           "text": [
             "There are 1 GPU(s) available.\n",
-            "Device name: NVIDIA A100-SXM4-40GB\n"
+            "Device name: Tesla V100-SXM2-16GB\n"
           ]
         }
       ],
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "5LFSFksFq9uh"
       },
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "cepCi-AEai1d"
       },
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "JmFUPvB7sI8F"
       },
@@ -184,13 +184,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "j6mSpEsjxhcf",
-        "outputId": "c1eea7e9-432d-47e3-d7e4-41424472c83f"
+        "outputId": "aaf7d621-55e5-42c3-e75f-634911360284"
       },
       "outputs": [
         {
@@ -205,7 +205,7 @@
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         }
       ],
@@ -221,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "4Hp1jEhusLY4"
       },
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "2nmY6psTsNYM"
       },
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "FKH587uXsr_N"
       },
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "KZi6aXsLstuT"
       },
@@ -567,7 +567,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "G1Sw8yAdvGls"
       },
@@ -956,7 +956,7 @@
       "metadata": {
         "id": "ZH9LPceZyQws"
       },
-      "execution_count": 117,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -983,9 +983,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TolPup9E1xFL",
-        "outputId": "85de2c0a-087f-4132-89dd-10f71275ab43"
+        "outputId": "96c65058-f075-4654-e3cc-c3a808b6580a"
       },
-      "execution_count": 118,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,7 +1015,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 16,
       "metadata": {
         "id": "eAyjpKA7fjkB"
       },
@@ -1049,7 +1049,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 17,
       "metadata": {
         "id": "MnVRcqHQf9Xo"
       },
@@ -1069,13 +1069,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "omb3wrzfGfa8",
-        "outputId": "66e9ddcc-5f15-41d8-cbba-a31ab2e08b7e"
+        "outputId": "d735ebe7-bb1f-4450-ded4-f9aa513dfd8b"
       },
       "outputs": [
         {
@@ -1124,6 +1124,55 @@
         "print(\"Test Accuracy : {}\".format(accuracy_score(y_true, y_pred), zero_division=1))\n",
         "print(\"\\nClassification Report : \")\n",
         "print(classification_report(y_true, y_pred, target_names=target_classes, zero_division=1))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "AUC Score"
+      ],
+      "metadata": {
+        "id": "ZVPxX3N91gu9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_t = y_true.transpose()\n",
+        "y_p = y_pred.transpose()\n",
+        "for i in range(len(y_t)):\n",
+        "  auc = roc_auc_score(y_t[i], y_p[i], average=None)\n",
+        "  print(f'{target_classes[i]} auc score: {auc:.2f}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "leUguaQA1jnS",
+        "outputId": "c59b808e-aea3-420d-a0dc-ea2029d902ab"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Obesity auc score: 0.50\n",
+            "Non.Adherence auc score: 0.56\n",
+            "Developmental.Delay.Retardation auc score: 0.50\n",
+            "Advanced.Heart.Disease auc score: 0.66\n",
+            "Advanced.Lung.Disease auc score: 0.58\n",
+            "Schizophrenia.and.other.Psychiatric.Disorders auc score: 0.59\n",
+            "Alcohol.Abuse auc score: 0.82\n",
+            "Other.Substance.Abuse auc score: 0.67\n",
+            "Chronic.Pain.Fibromyalgia auc score: 0.70\n",
+            "Chronic.Neurological.Dystrophies auc score: 0.56\n",
+            "Advanced.Cancer auc score: 0.67\n",
+            "Depression auc score: 0.61\n",
+            "Dementia auc score: 0.50\n",
+            "Unsure auc score: 0.50\n"
+          ]
+        }
       ]
     }
   ],
