Model Loading and Evaluation

--- a/Code/DLH_Patient_Phenotyping_Model.ipynb
+++ b/Code/DLH_Patient_Phenotyping_Model.ipynb
@@ -15,7 +15,10 @@
       "source": [
         "# Loading a Pre-Trained CNN Model for Patient Phenotyping Based on Patient Notes\n",
         "\n",
+        "This  notebook is to load a pre-trained model and test data and run the evaluation. \n",
+        "\n",
         "*   Read the file containing the test data only.\n",
+        "\n",
         "*   Create CNN Classfier\n",
         "*   Load the model\n",
         "*   Test Model Perfromance using \n",
@@ -35,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "5LFSFksFq9uh"
       },
@@ -122,7 +125,7 @@
       "metadata": {
         "id": "rykYrPCqaU1-"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +149,7 @@
       "metadata": {
         "id": "cvVvKQOPXB9z"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "G1Sw8yAdvGls"
       },
@@ -244,7 +247,7 @@
         "id": "TolPup9E1xFL",
         "outputId": "3c2ca9de-93a6-4dec-f3a3-cb68948b8af1"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "eAyjpKA7fjkB"
       },
@@ -308,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "id": "MnVRcqHQf9Xo"
       },
@@ -328,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -378,8 +381,6 @@
         "               'Dementia', 'Unsure']\n",
         "\n",
         "# Collecting the Predcitions and Truth\n",
-        "#Y_pred = torch.vstack((y_pred[0], y_pred[1], y_pred[2]))\n",
-        "#Y_true = torch.vstack((y_true[0], y_true[1], y_true[2]))\n",
         "print(\"Test Accuracy : {}\".format(accuracy_score(y_true, y_pred), zero_division=1))\n",
         "print(\"\\nClassification Report : \")\n",
         "print(classification_report(y_true, y_pred, target_names=target_classes, zero_division=1))"
@@ -410,7 +411,7 @@
         "id": "leUguaQA1jnS",
         "outputId": "98ecdd77-56ab-45a9-a5d0-b75cd680eccd"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
