--- a/Code/DLH_Patient_Phenotyping_final.ipynb
+++ b/Code/DLH_Patient_Phenotyping_final.ipynb
@@ -157,19 +157,12 @@
       ]
     },
     {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Summary Statistics of Labels"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
+        "### Summary Statistics of Labels\n",
         "dataframe.loc[:, dataframe.columns != 'TEXT'].astype('category').describe()"
       ]
     },
